# fractional_index

./: Cargo.toml  README.md  clippy.sh  math.tex
.github/workflows/: rust.yml
src/: fract_index.rs  hex.rs  lexico.rs  lib.rs  stringify.rs  zeno_index.rs
src/sqlx/: mod.rs  postgres.rs
tests/: sqlx.rs
tests/migrations/: 20240916125310_sqlx-test-schema.sql
