[package]
name = "fractional_index"
version = "2.0.1"
edition = "2018"
readme = "README.md"
description = "An implementation of fractional indexing."
authors = ["Paul Butler <paulgb@gmail.com>"]
license = "MIT"
repository = "https://github.com/drifting-in-space/fractional_index"

[dependencies]
serde = { version = "1.0.130", features = ["derive"], optional=true }

[features]
default = ["serde"]

[dev-dependencies]
serde_json = "1.0.91"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.40.0", features = ["macros", "rt"] }
